@@ -6,7 +6,11 @@
 <<?php echo $this->hl; ?>><?php echo $this->headline; ?></<?php echo $this->hl; ?>>
 <?php endif; ?>
 
+<?php if($this->empty): ?>
+<p class="message empty"><?php echo $this->message; ?></p>
+<?php else: ?>
 <?php echo $this->cart; ?>
+<?php endif; ?>
 
 </div>
 <!-- indexer::continue -->
